add bufr extractor usage to Jupyter Notebook

--- a/ecmwf_tc_forecasts_example.ipynb
+++ b/ecmwf_tc_forecasts_example.ipynb
@@ -148,17 +148,155 @@
    "execution_count": 3
   },
   {
-   "cell_type": "code",
-   "id": "d0203969",
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Extract",
+   "id": "7677d8fdc5f8c021"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-10T09:06:07.301953Z",
-     "start_time": "2025-09-10T09:06:07.300775Z"
+     "end_time": "2025-09-12T07:05:39.910085Z",
+     "start_time": "2025-09-12T07:05:39.256195Z"
     }
    },
-   "source": [],
+   "cell_type": "code",
+   "source": "from ecmwf_tc_data_extractor import extract_tc_data, extract_tc_data_from_file",
+   "id": "d947daee521a3c37",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-12T07:07:36.896329Z",
+     "start_time": "2025-09-12T07:07:36.867470Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Extract data from the downloaded KIKO storm file\n",
+    "filename = 'tc_data/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin'\n",
+    "\n",
+    "# Extract using the main function (saves to CSV automatically)\n",
+    "result = extract_tc_data_from_file(filename)"
+   ],
+   "id": "a98e7a9a471fa85f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting tropical cyclone data from: tc_data/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin\n",
+      "Stage 1: Reading BUFR file structure...\n",
+      "Storm: 11E, Ensemble Members: 52\n",
+      "Forecast Base Time: 2025-09-10 00:00:00\n",
+      "Number of Subsets: 52\n",
+      "Stage 2: Extracting data arrays from BUFR Section 4...\n",
+      "Array sizes:\n",
+      "  latitude: 4163\n",
+      "  longitude: 4163\n",
+      "  significance: 134\n",
+      "    Unique values: [1 3 4 5]\n",
+      "  time_period: 40\n",
+      "  pressure: 2081\n",
+      "  wind_speed: 2081\n",
+      "  wind_threshold: 123\n",
+      "    Unique values: [18 26 33]\n",
+      "  bearing: 984\n",
+      "    Unique values: [  0.  90. 180. 270.]\n",
+      "\n",
+      "Stage 3: Structuring extracted data...\n",
+      "Creating records for 4163 data points...\n",
+      "\n",
+      "Stage 4: Validating extracted data...\n",
+      "Total records extracted: 4163\n",
+      "Records with valid coordinates: 307\n",
+      "Records with pressure data: 153\n",
+      "Records with wind speed data: 153\n",
+      "Records with wind radii data: 123\n",
+      "Data quality: 7.4% valid coordinates\n",
+      "Data saved to: tc_data/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4_extracted.csv\n",
+      "==================================================\n",
+      "Summary:\n",
+      "   Successfully extracted: 4163 records\n",
+      "   CSV file: tc_data/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4_extracted.csv\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Extract data without saving to CSV",
+   "id": "1eff73cc6701fe63"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-12T07:08:20.728303Z",
+     "start_time": "2025-09-12T07:08:20.708082Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = extract_tc_data(filename, verbose=False)\n",
+    "\n",
+    "print(f\"Extracted {len(df)} records\")\n",
+    "print(f\"Columns: {list(df.columns)}\")\n",
+    "print(f\"Sample data:\")\n",
+    "print(df.head())"
+   ],
+   "id": "b5df800d7104564e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted 4163 records\n",
+      "Columns: ['storm_id', 'ensemble_member', 'forecast_step_hours', 'datetime', 'significance_code', 'position_type', 'latitude', 'longitude', 'pressure_pa', 'pressure_hpa', 'wind_speed_ms', 'wind_speed_knots', 'wind_threshold_ms', 'wind_threshold_knots', 'bearing_degrees', 'max_radius_km', 'array_index']\n",
+      "Sample data:\n",
+      "  storm_id  ensemble_member  forecast_step_hours            datetime  \\\n",
+      "0      11E                1                    6 2025-09-10 06:00:00   \n",
+      "1      11E                2                   12 2025-09-10 12:00:00   \n",
+      "2      11E                3                   18 2025-09-10 18:00:00   \n",
+      "3      11E                4                   24 2025-09-11 00:00:00   \n",
+      "4      11E                5                   30 2025-09-11 06:00:00   \n",
+      "\n",
+      "   significance_code      position_type  latitude  longitude  pressure_pa  \\\n",
+      "0                1.0       storm_center      22.7     -155.7          NaN   \n",
+      "1                4.0  analysis_position       NaN        NaN          NaN   \n",
+      "2                4.0  analysis_position       NaN        NaN          NaN   \n",
+      "3                4.0  analysis_position       NaN        NaN          NaN   \n",
+      "4                4.0  analysis_position       NaN        NaN          NaN   \n",
+      "\n",
+      "   pressure_hpa  wind_speed_ms  wind_speed_knots  wind_threshold_ms  \\\n",
+      "0           NaN            NaN               NaN               18.0   \n",
+      "1           NaN            NaN               NaN               26.0   \n",
+      "2           NaN            NaN               NaN               33.0   \n",
+      "3           NaN            NaN               NaN               18.0   \n",
+      "4           NaN            NaN               NaN               26.0   \n",
+      "\n",
+      "   wind_threshold_knots  bearing_degrees max_radius_km  array_index  \n",
+      "0              34.98912              0.0          None            0  \n",
+      "1              50.53984             90.0          None            1  \n",
+      "2              64.14672             90.0          None            2  \n",
+      "3              34.98912            180.0          None            3  \n",
+      "4              50.53984            180.0          None            4  \n"
+     ]
+    }
+   ],
+   "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "30daef52f558556d"
   }
  ],
  "metadata": {
