fix data extraction error

--- a/ecmwf_tc_forecasts_example.ipynb
+++ b/ecmwf_tc_forecasts_example.ipynb
@@ -29,8 +29,8 @@
    "id": "755e7190",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-10T09:06:05.422798Z",
-     "start_time": "2025-09-10T09:06:05.253689Z"
+     "end_time": "2025-09-12T08:52:09.179709Z",
+     "start_time": "2025-09-12T08:52:09.088934Z"
     }
    },
    "source": [
@@ -52,8 +52,8 @@
    "id": "6ff85008",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-10T09:06:06.127928Z",
-     "start_time": "2025-09-10T09:06:05.428069Z"
+     "end_time": "2025-09-12T08:52:10.837140Z",
+     "start_time": "2025-09-12T08:52:10.024689Z"
     }
    },
    "source": [
@@ -69,35 +69,36 @@
      "output_type": "stream",
      "text": [
       "Found 1 forecast dates\n",
-      "   Found 47 tropical cyclone track files\n",
-      "Found 26 unique storms\n",
-      "Found 26 unique storms:\n",
-      " 1. KIKO     at 22p7degN    , -155p7degW   (Forecast: 20250910000000)\n",
-      " 2. 70W      at 12p2degN    , 119p4degE    (Forecast: 20250910000000)\n",
-      " 3. 71W      at 8p6degN     , 175p4degE    (Forecast: 20250910000000)\n",
-      " 4. 72W      at 9p8degN     , 169p6degE    (Forecast: 20250910000000)\n",
-      " 5. 73W      at 34p9degN    , 124p1degE    (Forecast: 20250910000000)\n",
-      " 6. 74W      at 15p2degN    , 138p9degE    (Forecast: 20250910000000)\n",
-      " 7. 76W      at 18p6degN    , 122p6degE    (Forecast: 20250910000000)\n",
-      " 8. 78W      at 16p9degN    , 119p9degE    (Forecast: 20250910000000)\n",
-      " 9. 70E      at 10p6degN    , -96p9degW    (Forecast: 20250910000000)\n",
-      "10. 71E      at 12p9degN    , -106p1degW   (Forecast: 20250910000000)\n",
-      "11. 72E      at 14p6degN    , -96p2degW    (Forecast: 20250910000000)\n",
-      "12. 73E      at 10p2degN    , -138p4degW   (Forecast: 20250910000000)\n",
-      "13. 74E      at 12p6degN    , -90p6degW    (Forecast: 20250910000000)\n",
-      "14. 75E      at 14p1degN    , -110p7degW   (Forecast: 20250910000000)\n",
-      "15. 71L      at 15p9degN    , -20p2degW    (Forecast: 20250910000000)\n",
-      "16. 72L      at 12p8degN    , -17p1degW    (Forecast: 20250910000000)\n",
-      "17. 73L      at 37p2degN    , -65p3degW    (Forecast: 20250910000000)\n",
-      "18. 74L      at 15p9degN    , -18p5degW    (Forecast: 20250910000000)\n",
-      "19. 75L      at 11p1degN    , -26p9degW    (Forecast: 20250910000000)\n",
-      "20. 77L      at 17p8degN    , -19p7degW    (Forecast: 20250910000000)\n",
-      "21. 70C      at 9p3degN     , -166p3degW   (Forecast: 20250910000000)\n",
-      "22. 71C      at 9p2degN     , -179p5degW   (Forecast: 20250910000000)\n",
-      "23. 70A      at 25p2degN    , 66p2degE     (Forecast: 20250910000000)\n",
-      "24. 71A      at 18p1degN    , 71p2degE     (Forecast: 20250910000000)\n",
-      "25. 72A      at 17p6degN    , 72p4degE     (Forecast: 20250910000000)\n",
-      "26. 72B      at 15p9degN    , 86p6degE     (Forecast: 20250910000000)\n"
+      "   Found 51 tropical cyclone track files\n",
+      "Found 27 unique storms\n",
+      "Found 27 unique storms:\n",
+      " 1. 13E      at 15p8degN    , -99p1degW    (Forecast: 20250912000000)\n",
+      " 2. 72W      at 8p1degN     , 155p8degE    (Forecast: 20250912000000)\n",
+      " 3. 73W      at 20p5degN    , 117p1degE    (Forecast: 20250912000000)\n",
+      " 4. 74W      at 7p2degN     , 177p8degE    (Forecast: 20250912000000)\n",
+      " 5. 76W      at 19p7degN    , 141p6degE    (Forecast: 20250912000000)\n",
+      " 6. 78W      at 9p8degN     , 164p8degE    (Forecast: 20250912000000)\n",
+      " 7. 79W      at 17p1degN    , 132p8degE    (Forecast: 20250912000000)\n",
+      " 8. 70E      at 12p1degN    , -139p7degW   (Forecast: 20250912000000)\n",
+      " 9. 71E      at 17p1degN    , -108p8degW   (Forecast: 20250912000000)\n",
+      "10. 72E      at 14p3degN    , -117p5degW   (Forecast: 20250912000000)\n",
+      "11. 74E      at 11p9degN    , -93p2degW    (Forecast: 20250912000000)\n",
+      "12. 75E      at 10p7degN    , -94p2degW    (Forecast: 20250912000000)\n",
+      "13. 76E      at 12p1degN    , -89p6degW    (Forecast: 20250912000000)\n",
+      "14. 70L      at 14p3degN    , -17p3degW    (Forecast: 20250912000000)\n",
+      "15. 71L      at 37p4degN    , -56p4degW    (Forecast: 20250912000000)\n",
+      "16. 72L      at 11p4degN    , -69p8degW    (Forecast: 20250912000000)\n",
+      "17. 73L      at 34p4degN    , -64p8degW    (Forecast: 20250912000000)\n",
+      "18. 74L      at 17p1degN    , -46p2degW    (Forecast: 20250912000000)\n",
+      "19. 75L      at 12p6degN    , -40p5degW    (Forecast: 20250912000000)\n",
+      "20. 76L      at 12p2degN    , -11p1degW    (Forecast: 20250912000000)\n",
+      "21. 77L      at 15p7degN    , -60p6degW    (Forecast: 20250912000000)\n",
+      "22. 78L      at 21p9degN    , -44p8degW    (Forecast: 20250912000000)\n",
+      "23. 71C      at 8p5degN     , -168p2degW   (Forecast: 20250912000000)\n",
+      "24. 73C      at 9p3degN     , -172p9degW   (Forecast: 20250912000000)\n",
+      "25. 70A      at 19p9degN    , 72p6degE     (Forecast: 20250912000000)\n",
+      "26. 72A      at 26p6degN    , 52p5degE     (Forecast: 20250912000000)\n",
+      "27. 71B      at 19p9degN    , 90p3degE     (Forecast: 20250912000000)\n"
      ]
     }
    ],
@@ -116,8 +117,8 @@
    "id": "63307159",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-10T09:06:07.259272Z",
-     "start_time": "2025-09-10T09:06:06.132382Z"
+     "end_time": "2025-09-12T08:52:12.921549Z",
+     "start_time": "2025-09-12T08:52:12.260215Z"
     }
    },
    "source": [
@@ -132,14 +133,11 @@
       "Processing 1 forecast(s)\n",
       "Filtering for storm: KIKO\n",
       "\n",
-      "   Found 2 tropical cyclone track files\n",
-      "   Storm: KIKO at 22p7degN, -155p7degW\n",
-      "   Downloaded: A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin (25,289 bytes)\n",
-      "   Downloaded: A_JSXX02ECMF100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4.bin (214 bytes)\n",
-      "\n",
+      "   Found 0 tropical cyclone track files\n",
+      "   Warning: No tropical cyclone files found for 20250912000000\n",
       "==================================================\n",
       "Summary:\n",
-      "   Successfully downloaded: 2 files\n",
+      "   Successfully downloaded: 0 files\n",
       "   Failed downloads: 0 files\n",
       "   Files saved to: tc_data/\n"
      ]
@@ -156,21 +154,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T07:05:39.910085Z",
-     "start_time": "2025-09-12T07:05:39.256195Z"
+     "end_time": "2025-09-12T09:11:06.573985Z",
+     "start_time": "2025-09-12T09:11:06.313850Z"
     }
    },
    "cell_type": "code",
    "source": "from ecmwf_tc_data_extractor import extract_tc_data, extract_tc_data_from_file",
    "id": "d947daee521a3c37",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T07:07:36.896329Z",
-     "start_time": "2025-09-12T07:07:36.867470Z"
+     "end_time": "2025-09-12T09:11:07.448522Z",
+     "start_time": "2025-09-12T09:11:07.381590Z"
     }
    },
    "cell_type": "code",
@@ -206,20 +204,42 @@
       "  bearing: 984\n",
       "    Unique values: [  0.  90. 180. 270.]\n",
       "\n",
-      "Stage 3: Structuring extracted data...\n",
-      "Creating records for 4163 data points...\n",
+      "Stage 3: Mapping wind radii data to positions...\n",
+      "Processing 4163 positions...\n",
+      "Mapping wind radii data using systematic array association...\n",
       "\n",
-      "Stage 4: Validating extracted data...\n",
-      "Total records extracted: 4163\n",
-      "Records with valid coordinates: 307\n",
-      "Records with pressure data: 153\n",
-      "Records with wind speed data: 153\n",
+      "Stage 4: Structuring data and creating comprehensive records...\n",
+      "Total records created: 4163\n",
+      "Records with coordinates: 307\n",
       "Records with wind radii data: 123\n",
-      "Data quality: 7.4% valid coordinates\n",
+      "\n",
+      "Wind threshold distribution:\n",
+      "  35 knots: 41 records\n",
+      "  51 knots: 41 records\n",
+      "  64 knots: 41 records\n",
+      "\n",
+      "Bearing distribution:\n",
+      "  North (0.0°): 31 records\n",
+      "  East (90.0°): 32 records\n",
+      "  South (180.0°): 30 records\n",
+      "  West (270.0°): 30 records\n",
+      "\n",
+      "Sample wind radii records:\n",
+      "  1. Member 1, 6h: 35kt at 0° (22.70, -155.70)\n",
+      "  2. Member 14, 6h: 51kt at 90° (23.00, -155.60)\n",
+      "  3. Member 15, 6h: 64kt at 90° (23.40, -155.30)\n",
+      "  4. Member 20, 6h: 35kt at 180° (23.00, -155.50)\n",
+      "  5. Member 42, 6h: 51kt at 180° (23.00, -155.30)\n",
+      "  6. Member 14, 6h: 64kt at 270° (23.50, -155.10)\n",
+      "  7. Member 15, 6h: 35kt at 270° (23.40, -155.70)\n",
+      "  8. Member 20, 6h: 51kt at 0° (23.50, -155.80)\n",
+      "  9. Member 42, 6h: 64kt at 0° (23.40, -154.90)\n",
+      "  10. Member 11, 12h: 35kt at 90° (24.20, -155.70)\n",
       "Data saved to: tc_data/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4_extracted.csv\n",
       "==================================================\n",
       "Summary:\n",
       "   Successfully extracted: 4163 records\n",
+      "   Wind radii records: 123\n",
       "   CSV file: tc_data/A_JSXX02ECEP100000_C_ECMP_20250910000000_tropical_cyclone_track_KIKO_-155p7degW_22p7degN_bufr4_extracted.csv\n",
       "==================================================\n"
      ]
@@ -236,8 +256,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T07:08:20.728303Z",
-     "start_time": "2025-09-12T07:08:20.708082Z"
+     "end_time": "2025-09-12T09:11:10.343864Z",
+     "start_time": "2025-09-12T09:11:10.311930Z"
     }
    },
    "cell_type": "code",
@@ -256,39 +276,46 @@
      "output_type": "stream",
      "text": [
       "Extracted 4163 records\n",
-      "Columns: ['storm_id', 'ensemble_member', 'forecast_step_hours', 'datetime', 'significance_code', 'position_type', 'latitude', 'longitude', 'pressure_pa', 'pressure_hpa', 'wind_speed_ms', 'wind_speed_knots', 'wind_threshold_ms', 'wind_threshold_knots', 'bearing_degrees', 'max_radius_km', 'array_index']\n",
+      "Columns: ['storm_id', 'ensemble_member', 'forecast_step_hours', 'datetime', 'significance_code', 'position_type', 'latitude', 'longitude', 'pressure_pa', 'pressure_hpa', 'wind_speed_ms', 'wind_speed_knots', 'wind_threshold_ms', 'wind_threshold_knots', 'bearing_degrees', 'max_radius_km', 'array_index', 'has_wind_radii']\n",
       "Sample data:\n",
       "  storm_id  ensemble_member  forecast_step_hours            datetime  \\\n",
       "0      11E                1                    6 2025-09-10 06:00:00   \n",
-      "1      11E                2                   12 2025-09-10 12:00:00   \n",
-      "2      11E                3                   18 2025-09-10 18:00:00   \n",
-      "3      11E                4                   24 2025-09-11 00:00:00   \n",
-      "4      11E                5                   30 2025-09-11 06:00:00   \n",
+      "1      11E                2                    6 2025-09-10 06:00:00   \n",
+      "2      11E                3                    6 2025-09-10 06:00:00   \n",
+      "3      11E                4                    6 2025-09-10 06:00:00   \n",
+      "4      11E                5                    6 2025-09-10 06:00:00   \n",
       "\n",
       "   significance_code      position_type  latitude  longitude  pressure_pa  \\\n",
-      "0                1.0       storm_center      22.7     -155.7          NaN   \n",
-      "1                4.0  analysis_position       NaN        NaN          NaN   \n",
-      "2                4.0  analysis_position       NaN        NaN          NaN   \n",
-      "3                4.0  analysis_position       NaN        NaN          NaN   \n",
-      "4                4.0  analysis_position       NaN        NaN          NaN   \n",
+      "0                  1       storm_center      22.7     -155.7          NaN   \n",
+      "1                  4  analysis_position       NaN        NaN          NaN   \n",
+      "2                  4  analysis_position       NaN        NaN          NaN   \n",
+      "3                  4  analysis_position       NaN        NaN          NaN   \n",
+      "4                  4  analysis_position       NaN        NaN          NaN   \n",
       "\n",
       "   pressure_hpa  wind_speed_ms  wind_speed_knots  wind_threshold_ms  \\\n",
       "0           NaN            NaN               NaN               18.0   \n",
-      "1           NaN            NaN               NaN               26.0   \n",
-      "2           NaN            NaN               NaN               33.0   \n",
-      "3           NaN            NaN               NaN               18.0   \n",
-      "4           NaN            NaN               NaN               26.0   \n",
+      "1           NaN            NaN               NaN                NaN   \n",
+      "2           NaN            NaN               NaN                NaN   \n",
+      "3           NaN            NaN               NaN                NaN   \n",
+      "4           NaN            NaN               NaN                NaN   \n",
       "\n",
-      "   wind_threshold_knots  bearing_degrees max_radius_km  array_index  \n",
-      "0              34.98912              0.0          None            0  \n",
-      "1              50.53984             90.0          None            1  \n",
-      "2              64.14672             90.0          None            2  \n",
-      "3              34.98912            180.0          None            3  \n",
-      "4              50.53984            180.0          None            4  \n"
+      "   wind_threshold_knots  bearing_degrees max_radius_km  array_index  \\\n",
+      "0              34.98912              0.0          None            0   \n",
+      "1                   NaN              NaN          None            1   \n",
+      "2                   NaN              NaN          None            2   \n",
+      "3                   NaN              NaN          None            3   \n",
+      "4                   NaN              NaN          None            4   \n",
+      "\n",
+      "   has_wind_radii  \n",
+      "0            True  \n",
+      "1           False  \n",
+      "2           False  \n",
+      "3           False  \n",
+      "4           False  \n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "metadata": {},
