update module naming

--- a/ecmwf_tc_forecasts_example.ipynb
+++ b/ecmwf_tc_forecasts_example.ipynb
@@ -330,7 +330,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from ecmwf_tc_data_exploration import (\n",
+    "from ecmwf_tc_data_explorer import (\n",
     "    load_tc_data,\n",
     "    calculate_wind_radii_from_points,\n",
     "    create_track_visualization,\n",
