add additional testing for most recent hurricane forecast

--- a/ecmwf_tc_forecasts_example_KIKO.ipynb
+++ b/ecmwf_tc_forecasts_example_KIKO.ipynb
@@ -29,15 +29,15 @@
    "id": "755e7190",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T08:52:09.179709Z",
-     "start_time": "2025-09-12T08:52:09.088934Z"
+     "end_time": "2025-09-15T08:26:39.267449Z",
+     "start_time": "2025-09-15T08:26:39.162121Z"
     }
    },
    "source": [
     "from ecmwf_tc_data_downloader import download_tc_data, list_available_storms"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 19
   },
   {
    "cell_type": "markdown",
@@ -52,8 +52,8 @@
    "id": "6ff85008",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T08:52:10.837140Z",
-     "start_time": "2025-09-12T08:52:10.024689Z"
+     "end_time": "2025-09-15T08:26:40.995295Z",
+     "start_time": "2025-09-15T08:26:40.069713Z"
     }
    },
    "source": [
@@ -72,37 +72,37 @@
       "   Found 51 tropical cyclone track files\n",
       "Found 27 unique storms\n",
       "Found 27 unique storms:\n",
-      " 1. 13E      at 15p8degN    , -99p1degW    (Forecast: 20250912000000)\n",
-      " 2. 72W      at 8p1degN     , 155p8degE    (Forecast: 20250912000000)\n",
-      " 3. 73W      at 20p5degN    , 117p1degE    (Forecast: 20250912000000)\n",
-      " 4. 74W      at 7p2degN     , 177p8degE    (Forecast: 20250912000000)\n",
-      " 5. 76W      at 19p7degN    , 141p6degE    (Forecast: 20250912000000)\n",
-      " 6. 78W      at 9p8degN     , 164p8degE    (Forecast: 20250912000000)\n",
-      " 7. 79W      at 17p1degN    , 132p8degE    (Forecast: 20250912000000)\n",
-      " 8. 70E      at 12p1degN    , -139p7degW   (Forecast: 20250912000000)\n",
-      " 9. 71E      at 17p1degN    , -108p8degW   (Forecast: 20250912000000)\n",
-      "10. 72E      at 14p3degN    , -117p5degW   (Forecast: 20250912000000)\n",
-      "11. 74E      at 11p9degN    , -93p2degW    (Forecast: 20250912000000)\n",
-      "12. 75E      at 10p7degN    , -94p2degW    (Forecast: 20250912000000)\n",
-      "13. 76E      at 12p1degN    , -89p6degW    (Forecast: 20250912000000)\n",
-      "14. 70L      at 14p3degN    , -17p3degW    (Forecast: 20250912000000)\n",
-      "15. 71L      at 37p4degN    , -56p4degW    (Forecast: 20250912000000)\n",
-      "16. 72L      at 11p4degN    , -69p8degW    (Forecast: 20250912000000)\n",
-      "17. 73L      at 34p4degN    , -64p8degW    (Forecast: 20250912000000)\n",
-      "18. 74L      at 17p1degN    , -46p2degW    (Forecast: 20250912000000)\n",
-      "19. 75L      at 12p6degN    , -40p5degW    (Forecast: 20250912000000)\n",
-      "20. 76L      at 12p2degN    , -11p1degW    (Forecast: 20250912000000)\n",
-      "21. 77L      at 15p7degN    , -60p6degW    (Forecast: 20250912000000)\n",
-      "22. 78L      at 21p9degN    , -44p8degW    (Forecast: 20250912000000)\n",
-      "23. 71C      at 8p5degN     , -168p2degW   (Forecast: 20250912000000)\n",
-      "24. 73C      at 9p3degN     , -172p9degW   (Forecast: 20250912000000)\n",
-      "25. 70A      at 19p9degN    , 72p6degE     (Forecast: 20250912000000)\n",
-      "26. 72A      at 26p6degN    , 52p5degE     (Forecast: 20250912000000)\n",
-      "27. 71B      at 19p9degN    , 90p3degE     (Forecast: 20250912000000)\n"
+      " 1. MARIO    at 19p1degN    , -111p1degW   (Forecast: 20250915000000)\n",
+      " 2. 70W      at 12p6degN    , 118p4degE    (Forecast: 20250915000000)\n",
+      " 3. 71W      at 13p3degN    , 126p3degE    (Forecast: 20250915000000)\n",
+      " 4. 74W      at 9p2degN     , 151p8degE    (Forecast: 20250915000000)\n",
+      " 5. 75W      at 7p2degN     , 105p5degE    (Forecast: 20250915000000)\n",
+      " 6. 76W      at 33p4degN    , 139p5degE    (Forecast: 20250915000000)\n",
+      " 7. 77W      at 16p9degN    , 102p2degE    (Forecast: 20250915000000)\n",
+      " 8. 78W      at 18p1degN    , 126p9degE    (Forecast: 20250915000000)\n",
+      " 9. 80W      at 15p6degN    , 133p3degE    (Forecast: 20250915000000)\n",
+      "10. 70E      at 18p6degN    , -110p7degW   (Forecast: 20250915000000)\n",
+      "11. 71E      at 12p6degN    , -108p8degW   (Forecast: 20250915000000)\n",
+      "12. 72E      at 12p2degN    , -94p1degW    (Forecast: 20250915000000)\n",
+      "13. 74E      at 11p9degN    , -89p4degW    (Forecast: 20250915000000)\n",
+      "14. 72L      at 12p7degN    , -33p1degW    (Forecast: 20250915000000)\n",
+      "15. 73L      at 8p9degN     , -24p7degW    (Forecast: 20250915000000)\n",
+      "16. 75L      at 12p4degN    , -29p1degW    (Forecast: 20250915000000)\n",
+      "17. 76L      at 11p9degN    , -25p2degW    (Forecast: 20250915000000)\n",
+      "18. 77L      at 11p2degN    , -82p5degW    (Forecast: 20250915000000)\n",
+      "19. 78L      at 18p8degN    , -93p2degW    (Forecast: 20250915000000)\n",
+      "20. 79L      at 17p1degN    , -51p7degW    (Forecast: 20250915000000)\n",
+      "21. 70C      at 8p7degN     , -175p7degW   (Forecast: 20250915000000)\n",
+      "22. 72C      at 10p7degN    , -161p5degW   (Forecast: 20250915000000)\n",
+      "23. 73C      at 9p3degN     , -160p9degW   (Forecast: 20250915000000)\n",
+      "24. 70A      at 27p5degN    , 67p7degE     (Forecast: 20250915000000)\n",
+      "25. 70B      at 17p2degN    , 85p2degE     (Forecast: 20250915000000)\n",
+      "26. 71B      at 17p6degN    , 86p6degE     (Forecast: 20250915000000)\n",
+      "27. 72B      at 17p1degN    , 88p3degE     (Forecast: 20250915000000)\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 20
   },
   {
    "cell_type": "markdown",
@@ -324,8 +324,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T07:57:09.948398Z",
-     "start_time": "2025-09-15T07:57:09.945793Z"
+     "end_time": "2025-09-15T08:43:35.456510Z",
+     "start_time": "2025-09-15T08:43:35.117088Z"
     }
    },
    "cell_type": "code",
@@ -342,13 +342,13 @@
    ],
    "id": "b168d081ce1d02c",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T07:57:11.285930Z",
-     "start_time": "2025-09-15T07:57:11.245694Z"
+     "end_time": "2025-09-15T08:43:35.499100Z",
+     "start_time": "2025-09-15T08:43:35.460113Z"
     }
    },
    "cell_type": "code",
@@ -394,7 +394,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -405,8 +405,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T07:58:27.310017Z",
-     "start_time": "2025-09-15T07:58:27.093406Z"
+     "end_time": "2025-09-15T08:43:37.090150Z",
+     "start_time": "2025-09-15T08:43:36.837397Z"
     }
    },
    "cell_type": "code",
@@ -427,7 +427,7 @@
      }
     }
    ],
-   "execution_count": 13
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -438,14 +438,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T07:58:36.341652Z",
-     "start_time": "2025-09-15T07:58:35.606496Z"
+     "end_time": "2025-09-15T08:43:39.243513Z",
+     "start_time": "2025-09-15T08:43:38.515475Z"
     }
    },
    "cell_type": "code",
    "source": "fig_tracks = create_track_visualization(df)",
    "id": "e844325a0ecaff8c",
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Displaying all 8 ensemble members\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -460,7 +467,7 @@
      }
     }
    ],
-   "execution_count": 14
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -471,8 +478,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T07:58:44.954517Z",
-     "start_time": "2025-09-15T07:58:44.783755Z"
+     "end_time": "2025-09-15T08:43:42.060555Z",
+     "start_time": "2025-09-15T08:43:41.878803Z"
     }
    },
    "cell_type": "code",
@@ -483,6 +490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Displaying all 8 ensemble members\n",
       "  Drawing 123 directional wind swaths...\n"
      ]
     },
@@ -500,7 +508,7 @@
      }
     }
    ],
-   "execution_count": 15
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -511,8 +519,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T07:59:09.802981Z",
-     "start_time": "2025-09-15T07:59:09.734332Z"
+     "end_time": "2025-09-15T08:43:44.797720Z",
+     "start_time": "2025-09-15T08:43:44.696777Z"
     }
    },
    "cell_type": "code",
@@ -533,7 +541,7 @@
      }
     }
    ],
-   "execution_count": 16
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -544,8 +552,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-15T07:59:26.778710Z",
-     "start_time": "2025-09-15T07:59:26.251012Z"
+     "end_time": "2025-09-15T08:43:46.460942Z",
+     "start_time": "2025-09-15T08:43:45.943476Z"
     }
    },
    "cell_type": "code",
@@ -566,7 +574,7 @@
      }
     }
    ],
-   "execution_count": 17
+   "execution_count": 7
   },
   {
    "metadata": {},
